# QuantityMeasurementCPP

./: CMakeLists.txt  README.md
main/: feet.cpp  feet.h
main/enums/: UnitType.h
main/exception/: quantityMeasurementException.h
main/model/: feet.cpp  feet.h  length.cpp  length.h  quantityMeasurement.cpp  quantityMeasurement.h
main/utility/: unit.cpp  unit.h
test/: feetTest.cpp  lengthTest.cpp  quantityMeasurementTest.cpp
